--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.11.1",
+    "@stripe/react-stripe-js": "^5.4.1",
+    "@stripe/stripe-js": "^8.5.3",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.25",
     "jwt-decode": "^4.0.0",
@@ -18,7 +21,8 @@
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.10.1"
+    "react-router-dom": "^7.10.1",
+    "react-stripe-js": "^1.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
